--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,15 +24,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Boxcar</title>
+    <title>HNC Scholar Scores</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=BOXCAR_ID"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=HNC_SCHOLAR_SCORES_ID"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'BOXCAR_ID');
+  gtag('config', 'HNC_SCHOLAR_SCORES_ID');
 </script>
   </head>
   <body>
